@@ -90,4 +90,4 @@ The following options may be present when you expand the PDF section:
 All major changes to the repository (new solutions, major updates, new videos / demos, etc.) are tracked in the link:change-log.html[change log].
 
 == Feedback
-Please use link:https://github.com/NetAppDocs/netapp-solutions/issues/new?body=Page%3A%20[this link] to request changes to content or provide feedback on the content.
+Please use link:https://github.com/NetAppDocs/netapp-solutions/issues/new?body=%0d%0a%0d%0aFeedback:%20%0d%0aAdditional%20Comments:&title=Feedback[this link] to request changes to content or provide feedback on the content.  Please be as specific as possible to ensure that your feedback is addressed appropriately.
