@@ -3,20 +3,24 @@ title: Artificial Intelligence
 entries:
   - title: AI Converged Infrastructures
     entries:
-      - title: NetApp ONTAP AI with NVIDIA DGX A100 Systems Design Guide
-        url: https://www.netapp.com/pdf.html?item=/media/19432-nva-1151-design.pdf
-      - title: NetApp ONTAP AI with NVIDIA DGX A100 Systems Deployment Guide
-        url: https://www.netapp.com/pdf.html?item=/media/20708-nva-1151-deploy.pdf
-      - title: NetApp ONTAP AI with NVIDIA DGX A100 Systems and Mellanox Spectrum Ethernet Switches Design Guide
-        url: https://www.netapp.com/pdf.html?item=/media/21793-nva-1153-design.pdf
-      - title: NetApp ONTAP AI with NVIDIA DGX A100 Systems and Mellanox Spectrum Ethernet Switches Deployment Guide
-        url: https://www.netapp.com/pdf.html?item=/media/21789-nva-1153-deploy.pdf
-      - title: NetApp EF-Series AI with NVIDIA DGX A100 Systems and BeeGFS
-        url: https://www.netapp.com/us/media/tr-4755.pdf
-      - title: NetApp EF-Series AI with NVIDIA DGX A100 Systems and BeeGFS Design
-        url: https://www.netapp.com/pdf.html?item=/media/25445-nva-1156-design.pdf
-      - title: NetApp EF-Series AI with NVIDIA DGX A100 Systems and BeeGFS Deployment
-        url: https://www.netapp.com/pdf.html?item=/media/25574-nva-1156-deploy.pdf
+      - title: ONTAP AI with NVIDIA
+        entries:
+          - title: ONTAP AI with NVIDIA DGX A100 Systems Design Guide
+            url: https://www.netapp.com/pdf.html?item=/media/19432-nva-1151-design.pdf
+          - title: ONTAP AI with NVIDIA DGX A100 Systems Deployment Guide
+            url: https://www.netapp.com/pdf.html?item=/media/20708-nva-1151-deploy.pdf
+          - title: ONTAP AI with NVIDIA DGX A100 Systems and Mellanox Spectrum Ethernet Switches Design Guide
+            url: https://www.netapp.com/pdf.html?item=/media/21793-nva-1153-design.pdf
+          - title: ONTAP AI with NVIDIA DGX A100 Systems and Mellanox Spectrum Ethernet Switches Deployment Guide
+            url: https://www.netapp.com/pdf.html?item=/media/21789-nva-1153-deploy.pdf
+      - title: EF-Series AI with NVIDA 
+        entries:
+          - title: EF-Series AI with NVIDIA DGX A100 Systems and BeeGFS
+            url: https://www.netapp.com/us/media/tr-4755.pdf
+          - title: EF-Series AI with NVIDIA DGX A100 Systems and BeeGFS Design
+            url: https://www.netapp.com/pdf.html?item=/media/25445-nva-1156-design.pdf
+          - title: EF-Series AI with NVIDIA DGX A100 Systems and BeeGFS Deployment
+            url: https://www.netapp.com/pdf.html?item=/media/25574-nva-1156-deploy.pdf
       - title: BeeGFS with NetApp E-Series Reference Architecture
         url: https://www.netapp.com/us/media/tr-4782.pdf
       - title: Deploying IBM Spectrum Scale with NetApp E-Series Storage
